samples/_failures_safe/1761045129_c37bd6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e311cb6.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_7e311cb6.c:167:12: error: missing terminating " character
  167 |     printf("%-12s %-15s %-6
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7e311cb6.c:167:5: error: expected expression at end of input
  167 |     printf("%-12s %-15s %-6
      |     ^~~~~~
./samples/SAFE/__tmp_7e311cb6.c:167:5: error: expected declaration or statement at end of input
